#640: fix line number alignment in code block

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -157,16 +157,22 @@
   .highlight {
     direction: ltr;
     unicode-bidi: embed;
-  }
-  
-  .highlight table tr {
-    td:nth-child(1) pre {
-      margin: 0;
-      padding-inline-end: 0;
-    }
-    td:nth-child(2) pre {
-      margin: 0;
-      padding-inline-start: 0;
+    border-radius: $border-radius;
+    overflow: hidden;
+
+    table tr {
+      td pre code > span {
+        display: flex;
+      }
+      
+      td:nth-child(1) pre {
+        margin: 0;
+        padding-inline-end: 0;
+      }
+      td:nth-child(2) pre {
+        margin: 0;
+        padding-inline-start: 0;
+      }
     }
   }
 
